--- a/package.json
+++ b/package.json
@@ -3,17 +3,62 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babbage/react-prompt": "^0.2.20",
+    "@babbage/sdk-ts": "^0.2.58",
+    "@babbage/tokenator": "^0.2.37",
+    "@bsv/overlay": "^0.1.11",
+    "@bsv/sdk": "^1.1.24",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.4",
+    "@mui/material": "^6.1.4",
+    "@mui/system": "^6.1.4",
+    "@packetpay/express": "^0.2.36",
+    "@packetpay/js": "^0.2.36",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.114",
+    "@types/node": "^22.7.6",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "authrite-express": "^0.4.36",
+    "authrite-js": "^0.4.36",
+    "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
+    "bs58": "^6.0.0",
+    "crypto": "^1.0.1",
+    "cwi-base": "^0.4.54",
+    "cwi-external-services": "^0.4.64",
+    "dotenv": "^16.4.5",
+    "elliptic": "^6.5.7",
+    "email-tokenator": "^0.1.46",
+    "express": "^4.21.1",
+    "filereader": "^0.10.3",
+    "identinator": "^0.1.8",
+    "knex": "^3.1.0",
+    "moment": "^2.30.1",
+    "mysql2": "^3.11.3",
+    "nanoseek": "^0.2.36",
+    "nanostore-publisher": "^0.2.36",
+    "ninja-base": "^0.3.57",
+    "node-fetch": "^3.3.2",
+    "pushdrop": "^0.1.64",
     "react": "^18.3.1",
+    "react-date-picker": "^11.0.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-redux": "^9.1.2",
+    "react-router": "^6.27.0",
+    "react-router-dom": "^6.27.0",
+    "react-scripts": "^5.0.1",
+    "react-time-picker": "^7.0.0",
+    "react-toastify": "^10.0.6",
+    "tokenator": "^0.0.4",
     "typescript": "^4.9.5",
+    "uhrp-react": "^0.2.38",
+    "uhrp-url": "^0.1.10",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
