--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,43 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Node.js dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
-/coverage
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# production
-/build
-
-# misc
-.DS_Store
+# Environment Variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Mac OS files
+.DS_Store
+
+# Temporary files
+*.tmp
+*.temp
+
+# IDE/editor specific
+.vscode/
+.idea/
+*.swp
+*~.swp
+*.swo
+
+# Build and production files
+/build
+/dist
+
+# Coverage directory used by testing tools like jest
+/coverage
+
+# Local database (if used)
+/database/*.sqlite
+
+# Other OS-specific or system files
+Thumbs.db
