--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
     "@types/node": "^22.7.6",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "assert": "^2.1.0",
     "authrite-express": "^0.4.36",
     "authrite-js": "^0.4.36",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
+    "browserify-fs": "^1.0.0",
     "bs58": "^6.0.0",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
-    "crypto-browserify": "^3.12.0",
+    "crypto-browserify": "^3.12.1",
     "cwi-base": "^0.4.54",
     "cwi-external-services": "^0.4.64",
     "dotenv": "^16.4.5",
@@ -37,6 +39,8 @@
     "email-tokenator": "^0.1.46",
     "express": "^4.21.1",
     "filereader": "^0.10.3",
+    "fs": "^0.0.1-security",
+    "https-browserify": "^1.0.0",
     "identinator": "^0.1.8",
     "knex": "^3.1.0",
     "moment": "^2.30.1",
@@ -67,6 +71,7 @@
     "uhrp-url": "^0.1.10",
     "url": "^0.11.4",
     "uuid": "^10.0.0",
+    "vm-browserify": "^1.1.2",
     "web-vitals": "^2.1.4",
     "webpack": "^5.95.0"
   },
@@ -97,6 +102,8 @@
   "devDependencies": {
     "@craco/craco": "^7.1.0",
     "@types/express": "^4.17.21",
-    "process": "^0.11.10"
+    "customize-cra": "^1.0.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1"
   }
 }
