--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "authrite-js": "^0.4.36",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
-    "browserify-fs": "^1.0.0",
     "bs58": "^6.0.0",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
@@ -40,7 +39,6 @@
     "express": "^4.21.1",
     "filereader": "^0.10.3",
     "fs": "^0.0.1-security",
-    "https-browserify": "^1.0.0",
     "identinator": "^0.1.8",
     "knex": "^3.1.0",
     "moment": "^2.30.1",
@@ -71,7 +69,6 @@
     "uhrp-url": "^0.1.10",
     "url": "^0.11.4",
     "uuid": "^10.0.0",
-    "vm-browserify": "^1.1.2",
     "web-vitals": "^2.1.4",
     "webpack": "^5.95.0"
   },
@@ -102,8 +99,12 @@
   "devDependencies": {
     "@craco/craco": "^7.1.0",
     "@types/express": "^4.17.21",
+    "browserify-fs": "^1.0.0",
     "customize-cra": "^1.0.0",
+    "https-browserify": "^1.0.0",
     "process": "^0.11.10",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "stream-http": "^3.2.0",
+    "vm-browserify": "^1.1.2"
   }
 }
